force-app/main/default/objects/edynamics__Chatter_Archive__c/edynamics__Chatter_Archive__c.object-meta.xml
<CustomObject>
    <description>Chatter_Archive temporary storage</description>
    <label>Chatter_Archive</label>
    <nameField>
        <label>Chatter_Archive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter_Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>