force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__Body__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Body__c</fullName>
    <label>Body</label>
    <type>TextArea</type>
</CustomField>