force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__CommentLinkedToFeedId__c.field-meta.xml
<CustomField>
    <fullName>edynamics__CommentLinkedToFeedId__c</fullName>
    <label>CommentLinkedToFeedId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>