force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__ContentDescription__c.field-meta.xml
<CustomField>
    <fullName>edynamics__ContentDescription__c</fullName>
    <label>ContentDescription</label>
    <type>TextArea</type>
</CustomField>