force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__ContentFileName__c.field-meta.xml
<CustomField>
    <fullName>edynamics__ContentFileName__c</fullName>
    <label>ContentFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>