force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__IDB__c.field-meta.xml
<CustomField>
    <fullName>edynamics__IDB__c</fullName>
    <label>IDB</label>
    <type>DateTime</type>
</CustomField>