force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__InsertedByDate__c.field-meta.xml
<CustomField>
    <fullName>edynamics__InsertedByDate__c</fullName>
    <label>InsertedByDate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>