force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__InsertedByID__c.field-meta.xml
<CustomField>
    <fullName>edynamics__InsertedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InsertedByID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chatter_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>