force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>edynamics__IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeleted</label>
    <type>Checkbox</type>
</CustomField>