force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__LikeCount__c.field-meta.xml
<CustomField>
    <fullName>edynamics__LikeCount__c</fullName>
    <label>LikeCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>