force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__LinkUrl__c.field-meta.xml
<CustomField>
    <fullName>edynamics__LinkUrl__c</fullName>
    <label>LinkUrl</label>
    <type>Url</type>
</CustomField>