force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__Title__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Title__c</fullName>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>