force-app/main/default/objects/edynamics__Chatter_Archive__c/fields/edynamics__Type__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Type__c</fullName>
    <label>Type</label>
    <type>TextArea</type>
</CustomField>